# apps-for-computing

./: .clang_complete  .gitignore  CMakeLists.txt  describable.hxx  main.cxx  main_widget.cxx  main_widget.hxx
describable/: CMakeLists.txt  describable.cxx  describable.hxx
lab1/: .clang_complete  CMakeLists.txt  lab1_widget.cxx  lab1_widget.hxx  main.cxx
lab2/: CMakeLists.txt  lab2_widget.cxx  lab2_widget.hxx  main.cxx
lab2/cmake/: FindQwt6.cmake
lab3/: CMakeLists.txt  lab3_widget.cxx  lab3_widget.hxx  main.cxx
lab4/: CMakeLists.txt  lab4_widget.cxx  lab4_widget.hxx  main.cxx
lab5/: CMakeLists.txt  lab5_widget.cxx  lab5_widget.hxx  main.cxx
lab6/: CMakeLists.txt  lab6_widget.cxx  lab6_widget.hxx  main.cxx
